fix: missalignment icon, feat: ep_profile_modal integration

--- a/static/css/rtcbox.css
+++ b/static/css/rtcbox.css
@@ -628,6 +628,7 @@
 	background-color: #fff;
 	display: flex;
 	flex-direction: row;
+	cursor: pointer;
 }
 .wrtc_inlineAvatars > .avatar img{
 	float: left;
